--- a/index.html
+++ b/index.html
@@ -58,10 +58,14 @@
       </div>
     </section>
     <section class="section-3">
+      <div contact-details>
+      <h3>Contact me on: 0682936891</h3>
+      </div>
       <div class="icons">
         <i class="fa-brands fa-github"></i>
         <i class="fa-brands fa-linkedin"></i>
         <i class="fa-brands fa-facebook"></i>
+
       </div>
       <div class="embed-map">
         <div style="position:relative; padding-bottom:56.25%; height:0; overflow:hidden; max-width:100%; height:100%;">
